# offshoreleaks-data-packages

./: .gitignore  CHANGELOG.md  DATABASE_SETUP.md  PUSH_TO_GITHUB.md  README.adoc  README.md
bloom/: icij-offshoreleaks.bloom-perspective
code/csharp/: Example.cs
code/java/: Example.java
code/javascript/: example.js
code/python/: example.py
documentation/: datashape.html  icij-offshoreleaks.neo4j-browser-guide  panama-papers-examples.html  pandora-papers-examples.html  paradise-papers-examples.html
graphql/: README.md
mcp/: .env.example  .gitignore  .pre-commit-config.yaml  =5.0.0  ALL_TESTS_FIXED.md  API_REFERENCE.md  CIRCUIT_BREAKER_FIX.md  CLI_GUIDE.md  DATABASE_FIX.md  DOCUMENTATION_AND_TESTING_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  MULTI_INTERFACE_DESIGN.md  PROJECT_STATUS_REPORT.md  README.md  TESTING_IMPROVEMENTS.md  claude_desktop_config.json  demo.py  e2e_setup.md  example_multi_interface.py  pyproject.toml  pytest-e2e.ini
mcp/.github/workflows/: test.yml
mcp/docs/: ADVANCED_ANALYSIS.md  MCP_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  api-spec.json
mcp/scripts/: deploy.sh  setup_test_data.py
mcp/src/offshore_leaks_mcp/: __init__.py  api.py  config.py  database.py  exporters.py  mcp_server.py  metrics.py  models.py  queries.py  resilience.py  server.py  service.py
mcp/src/offshore_leaks_mcp/cli/: __init__.py  client.py  formatters.py  main.py
mcp/templates/: network_visualization.html
mcp/tests/: README.md  __init__.py  conftest.py  test_api.py  test_basic.py  test_cli.py  test_database.py  test_e2e.py  test_integration.py  test_queries.py  test_server.py  test_service.py  test_utils.py
